samples/_failures_safe/1761413859_542513_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_b7ee0a9b.c: In function ‘main’:
./samples/SAFE/__tmp_b7ee0a9b.c:163: error: expected ‘{’ at end of input
